@@ -5,7 +5,8 @@ Changelog
 1.0.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Allow ordering by a method instead of an attribute.
+  [maurits]
 
 
 1.0.4 (2012-08-30)
